--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
   </head>
   <body>
     <header>
-      <div class="header-container container">
+      <div class="header__container container">
         <a href="" class="logo">Web<span class="logo-header">Studio</span></a>
         <nav>
-          <ul class="site-nav list">
-            <li><a href="./index.html" class="header-nav-link  link current">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-nav-link link">Портфоліо</a></li>
-            <li><a href="" class="header-nav-link link">Контакти</a></li>
+          <ul class="nav__list list">
+            <li><a href="./index.html" class="nav__link link current">Студія</a></li>
+            <li><a href="./portfolio.html" class="nav__link link">Портфоліо</a></li>
+            <li><a href="" class="nav__link link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="header__contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="tel-header">
-              <svg class="header-icon" width="16" height="12">
+            <a href="mailto:info@devstudio.com" class="header__tel">
+              <svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="mail-header link" href="tel:+380961111111">
-              <svg class="header-icon" width="10" height="16">
+            <a class="header__mail link" href="tel:+380961111111">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -57,37 +57,37 @@
     </header>
     <main>
       <section class="hero">
-        <div class="hero-container container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="hero__container container">
+          <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
       <section class="section">
         <div class="container">
-          <ul class="solution-container">
-            <li class="solution-item icon-antena">
-              <h3 class="solution-list">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="solutions">
+          <ul class="solution__container">
+            <li class="solution__item icon-antena">
+              <h3 class="solution__list">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="solution__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="solution-item icon-clock">
-              <h3 class="solution-list">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="solutions">
+            <li class="solution__item icon-clock">
+              <h3 class="solution__list">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="solution__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="solution-item icon-diagram">
-              <h3 class="solution-list">ПЛАНУВАННЯ</h3>
-              <p class="solutions">
+            <li class="solution__item icon-diagram">
+              <h3 class="solution__list">ПЛАНУВАННЯ</h3>
+              <p class="solution__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="solution-item icon-astronaut">
-              <h3 class="solution-list">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="solutions">
+            <li class="solution__item icon-astronaut">
+              <h3 class="solution__list">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="solution__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -95,53 +95,53 @@
           </ul>
         </div>
       </section>
-      <section class="work-section section">
+      <section class="work__section section">
         <div class="container">
-          <h2 class="work">Чим ми займаємося</h2>
-          <ul class="work-list">
+          <h2 class="work__title">Чим ми займаємося</h2>
+          <ul class="work__list">
             <li>
-              <div class="work-thumb">
+              <div class="work__thumb">
               <img src="./images/img1.jpg" alt="заняття" width="370" />
-             <div class="work-overlay">  
-              <p class="work-overlay-text">ДEКСТОПНІ ДОДАТКИ</p>
+             <div class="work__overlay">  
+              <p class="work__overlay__text">ДEКСТОПНІ ДОДАТКИ</p>
             </div>
               </div>
               </li>
             <li>   
-               <div class="work-thumb">
+               <div class="work__thumb">
               <img src="./images/img2.jpg" alt="заняття" width="370" />
-             <div class="work-overlay">  
-              <p class="work-overlay-text">МОБІЛЬНІ ДОДАТКИ</p>
+             <div class="work__overlay">  
+              <p class="work__overlay__text">МОБІЛЬНІ ДОДАТКИ</p>
             </div>
               </div>
               </li>
             <li>   
-               <div class="work-thumb">
+               <div class="work__thumb">
                  <img src="./images/img3.jpg" alt="заняття" width="370" />
-             <div class="work-overlay">  
-              <p class="work-overlay-text">ДІЗАЙНЕРСЬКІ РІШЕННЯ</p>
+             <div class="work__overlay">  
+              <p class="work__overlay__text">ДІЗАЙНЕРСЬКІ РІШЕННЯ</p>
             </div>
               </div>
              </li>
           </ul>
         </div>
       </section>
-      <section class="team-section section">
+      <section class="team__section section">
          <div class="container">
-          <h2 class="team">Наша команда</h2>
-          <ul class="team-container">
-            <li class="team-card">
+          <h2 class="team__title">Наша команда</h2>
+          <ul class="team__container">
+            <li class="team__card">
               <img
                 src="./images/t1.jpg"
                 alt="член команди"
                 width="270"
                 height="260"
               />
-              <div class="card">
-                <h3 class="name">Ігор Дем'яненко</h3>
-                <p class="profession" lang="en">Product Designer</p>
+              <div class="teammate__card">
+                <h3 class="teammate__name">Ігор Дем'яненко</h3>
+                <p class="teammate__profession" lang="en">Product Designer</p>
                 <ul class="socials">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.instagram.com/"
@@ -154,7 +154,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="social-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.twitter.com/"
@@ -167,7 +167,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.facebook.com/"
@@ -180,7 +180,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.linkedin.com/"
@@ -196,18 +196,18 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team__card">
               <img
                 src="./images/t2.jpg"
                 alt="член команди"
                 width="270"
                 height="260"
               />
-              <div class="card">
-                <h3 class="name">Ольга Рєпіна</h3>
-                <p class="profession" lang="en">Frontend Developer</p>
+              <div class="teammate__card">
+                <h3 class="teammate__name">Ольга Рєпіна</h3>
+                <p class="teammate__profession" lang="en">Frontend Developer</p>
                 <ul class="socials">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.instagram.com/"
@@ -233,7 +233,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.facebook.com/"
@@ -246,7 +246,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.linkedin.com/"
@@ -262,18 +262,18 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team__card">
               <img
                 src="./images/t3.jpg"
                 alt="член команди"
                 width="270"
                 height="260"
               />
-              <div class="card">
-                <h3 class="name">Микола Тарасов</h3>
-                <p class="profession" lang="en">Marketing</p>
+              <div class="teammate__card">
+                <h3 class="teammate__name">Микола Тарасов</h3>
+                <p class="teammate__profession" lang="en">Marketing</p>
                 <ul class="socials">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.instagram.com/"
@@ -299,7 +299,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.facebook.com/"
@@ -312,7 +312,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.linkedin.com/"
@@ -328,18 +328,18 @@
                 </ul>
               </div>
             </li>
-            <li class="team-card">
+            <li class="team__card">
               <img
                 src="./images/t4.jpg"
                 alt="член команди"
                 width="270"
                 height="260"
               />
-              <div class="card">
-                <h3 class="name">Михайло Єрмаков</h3>
-                <p class="profession" lang="en">UI Designer</p>
+              <div class="teammate__card">
+                <h3 class="teammate__name">Михайло Єрмаков</h3>
+                <p class="teammate__profession" lang="en">UI Designer</p>
                 <ul class="socials">
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.instagram.com/"
@@ -365,7 +365,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.facebook.com/"
@@ -378,7 +378,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="socials-item">
+                  <li class="socials__item">
                     <a
                       class="socials-link link"
                       href="https://www.linkedin.com/"
@@ -402,42 +402,42 @@
           <h2 class="client-header">Постійні клієнти</h2>
           <ul class="clients">
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="" width="106" height="60">
                   <use href="./images/icons.svg#group"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="client" width="106" height="60">
                   <use href="./images/icons.svg#group2"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="client" width="106" height="60">
                   <use href="./images/icons.svg#group3"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="client" width="106" height="60">
                   <use href="./images/icons.svg#group4"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="client" width="106" height="60">
                   <use href="./images/icons.svg#group5"></use>
                 </svg>
               </a>
             </li>
             <li>
-              <a class="client-link link" href="">
+              <a class="client__link link" href="">
                 <svg class="client" width="106" height="60">
                   <use href="./images/icons.svg#group6"></use>
                 </svg>
@@ -468,7 +468,7 @@
     <div>
       <h3 class="footer-socials-header">ПРИЄДНУЙТЕСЬ</h3>
       <ul class="footer-socials socials">
-        <li class="socials-item">
+        <li class="socials__item">
           <a class="footer-socials-link link" href="https://www.instagram.com/" aria-label="instagram" target="_blank"
             rel="noopener noreferrer">
             <svg class="socials-icon" width="20" height="20">
@@ -484,7 +484,7 @@
             </svg>
           </a>
         </li>
-        <li class="socials-item">
+        <li class="socials__item">
           <a class="footer-socials-link link" href="https://www.facebook.com/" aria-label="facebook" target="_blank"
             rel="noopener noreferrer">
             <svg class="socials-icon" width="20" height="20">
@@ -492,7 +492,7 @@
             </svg>
           </a>
         </li>
-        <li class="socials-item">
+        <li class="socials__item">
           <a class="footer-socials-link link" href="https://www.linkedin.com/" aria-label="linkedin" target="_blank"
             rel="noopener noreferrer">
             <svg class="socials-icon" width="20" height="20">
