--- a/portfolio.html
+++ b/portfolio.html
@@ -22,25 +22,25 @@
   </head>
   <body>
     <header>
-      <div class="header-container container">
+      <div class="header__container container">
         <a href="" class="logo">Web<span class="logo-header">Studio</span></a>
         <nav>
-          <ul class="site-nav list">
-            <li><a href="./index.html" class="header-nav-link  link">Студія</a></li>
-            <li><a href="./portfolio.html" class="header-nav-link link current">Портфоліо</a></li>
-            <li><a href="" class="header-nav-link link">Контакти</a></li>
+          <ul class="nav__list list">
+            <li><a href="./index.html" class="nav__link  link">Студія</a></li>
+            <li><a href="./portfolio.html" class="nav__link link current">Портфоліо</a></li>
+            <li><a href="" class="nav__link link">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="contacts">
+        <ul class="header__contacts">
           <li>
-            <a href="mailto:info@devstudio.com" class="tel-header">
-              <svg class="header-icon" width="16" height="12">
+            <a href="mailto:info@devstudio.com" class="header__tel">
+              <svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com</a>
           </li>
           <li>
-            <a class="mail-header link" href="tel:+380961111111">
+            <a class="header__mail link" href="tel:+380961111111">
               <svg class="header-icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
