--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="header__container container">
-        <a href="" class="logo">Web<span class="logo-header">Studio</span></a>
+        <a href="" class="logo">Web<span class="logo__header">Studio</span></a>
         <nav>
           <ul class="nav__list list">
             <li><a href="./index.html" class="nav__link link current">Студія</a></li>
@@ -399,7 +399,7 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="client-header">Постійні клієнти</h2>
+          <h2 class="client__header">Постійні клієнти</h2>
           <ul class="clients">
             <li>
               <a class="client__link link" href="">
@@ -449,53 +449,53 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
      
-      <div class="footer-container container">
+      <div class="footer__container container">
         <div>
-      <a href="" class="logo">Web<span class="logo-footer">Studio</span></a>
+      <a href="" class="logo">Web<span class="logo__footer">Studio</span></a>
       <ul>
-        <li class="footer-address">
+        <li class="footer__address">
           <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
         </li>
-        <li class="footer-address">
-          <a href="mailto:info@devstudio.com" class="tel-footer">info@devstudio.com</a>
+        <li class="footer__address">
+          <a href="mailto:info@devstudio.com" class="footer__tel">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+380961111111" class="mail-footer">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="footer__mail">+38 096 111 11 11</a>
         </li>
     </div>
     <div>
-      <h3 class="footer-socials-header">ПРИЄДНУЙТЕСЬ</h3>
-      <ul class="footer-socials socials">
+      <h3 class="footer__socials__header">ПРИЄДНУЙТЕСЬ</h3>
+      <ul class="footer__socials socials">
         <li class="socials__item">
-          <a class="footer-socials-link link" href="https://www.instagram.com/" aria-label="instagram" target="_blank"
+          <a class="footer__socials__link link" href="https://www.instagram.com/" aria-label="instagram" target="_blank"
             rel="noopener noreferrer">
-            <svg class="socials-icon" width="20" height="20">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/icons.svg#instagram"></use>
             </svg>
           </a>
         </li>
-        <li class="social-item">
-          <a class="footer-socials-link link" href="https://www.twitter.com/" aria-label="twitter" target="_blank"
+        <li class="social__item">
+          <a class="footer__socials__link link" href="https://www.twitter.com/" aria-label="twitter" target="_blank"
             rel="noopener noreferrer">
-            <svg class="socials-icon" width="20" height="20">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/icons.svg#twitter"></use>
             </svg>
           </a>
         </li>
         <li class="socials__item">
-          <a class="footer-socials-link link" href="https://www.facebook.com/" aria-label="facebook" target="_blank"
+          <a class="footer__socials__link link" href="https://www.facebook.com/" aria-label="facebook" target="_blank"
             rel="noopener noreferrer">
-            <svg class="socials-icon" width="20" height="20">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/icons.svg#facebook"></use>
             </svg>
           </a>
         </li>
         <li class="socials__item">
-          <a class="footer-socials-link link" href="https://www.linkedin.com/" aria-label="linkedin" target="_blank"
+          <a class="footer__socials__link link" href="https://www.linkedin.com/" aria-label="linkedin" target="_blank"
             rel="noopener noreferrer">
-            <svg class="socials-icon" width="20" height="20">
+            <svg class="socials__icon" width="20" height="20">
               <use href="./images/icons.svg#linkedin"></use>
             </svg>
           </a>
@@ -503,15 +503,11 @@
       </ul>
       </div>
       
-    <div class="footer-form-box">
-      <p class="foooter-form-header">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
-      <form class="footer-form" name="footer-form">
-        <input class="mail-field" type="text" name="user_mail" id="user_mail" placeholder="E-mail"/>
-        <button type="button" class="footer-button button">Підписатися
-          <svg class="icon-send" widht="24" height="24">
-            <use href="./images/icons.svg#icon-send"></use>
-          </svg>
-        </button>
+    <div class="footer__form__box">
+      <p class="foooter__form__header">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
+      <form class="footer__form" name="footer-form">
+        <input class="mail__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail"/>
+        <button type="button" class="footer__button button">Підписатися</button>
       </form>
     </div>
     </div>
@@ -556,7 +552,7 @@
         </div>
         <div class="modal-form-agreement" role="group">
           <input class="modal-form-checkbox" type="checkbox" id="user_agreement" />
-          <label class="modal-form-agreement-desc" for="user_agreement">Погоджуюся з розсилкою та приймаю <a class="modal-form-agreement-link" href="">Умови договору</a></label>
+          <label class="modal-form-agreement-desc" for="user_agreement">Погоджуюся з розсилкою та приймаю <a class="modal-form-agreement__link" href="">Умови договору</a></label>
         </div>
         <button class="modal-form-btn button" type="submit">Відправити</button>
         </form>
