--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </div>
-    </header>
+     </header>
     <main>
       <section class="hero">
         <div class="hero__container container">
@@ -95,7 +95,7 @@
           </ul>
         </div>
       </section>
-      <section class="work__section section">
+      <section class="work section">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -126,7 +126,7 @@
           </ul>
         </div>
       </section>
-      <section class="team__section section">
+      <section class="team section">
          <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__container">
@@ -143,52 +143,52 @@
                 <ul class="socials">
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.instagram.com/"
                       aria-label="instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.twitter.com/"
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.facebook.com/"
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.linkedin.com/"
                       aria-label="linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -209,52 +209,52 @@
                 <ul class="socials">
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.instagram.com/"
                       aria-label="instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.twitter.com/"
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.facebook.com/"
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.linkedin.com/"
                       aria-label="linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -275,52 +275,52 @@
                 <ul class="socials">
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.instagram.com/"
                       aria-label="instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.twitter.com/"
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.facebook.com/"
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.linkedin.com/"
                       aria-label="linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -341,52 +341,52 @@
                 <ul class="socials">
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.instagram.com/"
                       aria-label="instagram"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.twitter.com/"
                       aria-label="twitter"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.facebook.com/"
                       aria-label="facebook"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials__item">
                     <a
-                      class="socials-link link"
+                      class="socials__link link"
                       href="https://www.linkedin.com/"
                       aria-label="linkedin"
                       target="_blank"
                       rel="noopener noreferrer"
                     >
-                      <svg class="socials-icon" width="20" height="20">
+                      <svg class="socials__icon" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -506,7 +506,7 @@
     <div class="footer__form__box">
       <p class="foooter__form__header">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
       <form class="footer__form" name="footer-form">
-        <input class="mail__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail"/>
+        <input class="footer__form__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail"/>
         <button type="button" class="footer__button button">Підписатися</button>
       </form>
     </div>
@@ -552,7 +552,7 @@
         </div>
         <div class="modal-form-agreement" role="group">
           <input class="modal-form-checkbox" type="checkbox" id="user_agreement" />
-          <label class="modal-form-agreement-desc" for="user_agreement">Погоджуюся з розсилкою та приймаю <a class="modal-form-agreement__link" href="">Умови договору</a></label>
+          <label class="modal-form-agreement-desc" for="user_agreement">Погоджуюся з розсилкою та приймаю <a class="modal-form-agreement-link" href="">Умови договору</a></label>
         </div>
         <button class="modal-form-btn button" type="submit">Відправити</button>
         </form>
