--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <header class="header">
@@ -227,71 +227,72 @@
       </div>
     </main>
 
-  <footer class="footer">
-  
-    <div class="footer__container container">
-      <div>
-        <a href="" class="logo">Web<span class="logo__footer">Studio</span></a>
-        <ul>
-          <li class="footer__address">
-            <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
-          </li>
-          <li class="footer__address">
-            <a href="mailto:info@devstudio.com" class="footer__tel">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="footer__mail">+38 096 111 11 11</a>
-          </li>
-      </div>
-      <div>
-        <h3 class="footer__socials__header">ПРИЄДНУЙТЕСЬ</h3>
-        <ul class="footer__socials socials">
-          <li class="socials__item">
-            <a class="footer__socials__link link" href="https://www.instagram.com/" aria-label="instagram" target="_blank"
-              rel="noopener noreferrer">
-              <svg class="socials__icon" width="20" height="20">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="footer__socials__link link" href="https://www.twitter.com/" aria-label="twitter" target="_blank"
-              rel="noopener noreferrer">
-              <svg class="socials__icon" width="20" height="20">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="footer__socials__link link" href="https://www.facebook.com/" aria-label="facebook" target="_blank"
-              rel="noopener noreferrer">
-              <svg class="socials__icon" width="20" height="20">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="socials__item">
-            <a class="footer__socials__link link" href="https://www.linkedin.com/" aria-label="linkedin" target="_blank"
-              rel="noopener noreferrer">
-              <svg class="socials__icon" width="20" height="20">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-  
-      <div class="footer__form__box">
-        <p class="foooter__form__header">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
-        <form class="footer__form" name="footer-form">
-          <input class="mail__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail" />
-          <button type="button" class="footer__button button">Підписатися</button>
-        </form>
-      </div>
+<footer class="footer">
+
+  <div class="footer__container container">
+    <div>
+      <a href="" class="logo">Web<span class="logo__footer">Studio</span></a>
+      <ul>
+        <li class="footer__address">
+          <a href="" class="address">м. Київ, пр-т Лесі Українки, 26</a>
+        </li>
+        <li class="footer__address">
+          <a href="mailto:info@devstudio.com" class="footer__tel">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="footer__mail">+38 096 111 11 11</a>
+        </li>
     </div>
-  
-  
-  </footer>
+    <div>
+      <h3 class="footer__socials__header">ПРИЄДНУЙТЕСЬ</h3>
+      <ul class="footer__socials socials">
+        <li class="socials__item">
+          <a class="footer__socials__link link" href="https://www.instagram.com/" aria-label="instagram" target="_blank"
+            rel="noopener noreferrer">
+            <svg class="socials__icon" width="20" height="20">
+              <use href="./images/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="footer__socials__link link" href="https://www.twitter.com/" aria-label="twitter" target="_blank"
+            rel="noopener noreferrer">
+            <svg class="socials__icon" width="20" height="20">
+              <use href="./images/icons.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a class="footer__socials__link link" href="https://www.facebook.com/" aria-label="facebook" target="_blank"
+            rel="noopener noreferrer">
+            <svg class="socials__icon" width="20" height="20">
+              <use href="./images/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="socials__item">
+          <a class="footer__socials__link link" href="https://www.linkedin.com/" aria-label="linkedin" target="_blank"
+            rel="noopener noreferrer">
+            <svg class="socials__icon" width="20" height="20">
+              <use href="./images/icons.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="footer__form__box">
+      <p class="foooter__form__header">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
+      <form class="footer__form" name="footer-form">
+        <input class="footer__form__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail" />
+        <button type="button" class="footer__button button">Підписатися</button>
+      </form>
+    </div>
+  </div>
+
+
+</footer>
+
 
   </body>
 </html>
