--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="header__container container">
         <a href="" class="logo">Web<span class="logo__header">Studio</span></a>
-        <nav>
+        <nav class="nav">
           <ul class="nav__list list">
             <li><a href="./index.html" class="nav__link  link">Студія</a></li>
             <li><a href="./portfolio.html" class="nav__link link current">Портфоліо</a></li>
@@ -50,21 +50,21 @@
       </div>
     </header>
     <main>
-      <section class="section">
+      <section class="portfolio">
         <div class="container">
-        <ul class="flex-btn-secondary">
-          <li><button type="button" class="button-secondary">Усі</button></li>
+        <ul class="portolio__flex__btn">
+          <li><button type="button" class="portfolio__btn">Усі</button></li>
           <li>
-            <button type="button" class="button-secondary">Веб-сайти</button>
+            <button type="button" class="portfolio__btn">Веб-сайти</button>
           </li>
           <li>
-            <button type="button" class="button-secondary">Додатки</button>
+            <button type="button" class="portfolio__btn">Додатки</button>
           </li>
           <li>
-            <button type="button" class="button-secondary">Дизайн</button>
+            <button type="button" class="portfolio__btn">Дизайн</button>
           </li>
           <li>
-            <button type="button" class="button-secondary">Маркетинг</button>
+            <button type="button" class="portfolio__btn">Маркетинг</button>
           </li>
         </ul>
 
