--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="header">
       <div class="header__container container">
         <a href="" class="logo">Web<span class="logo__header">Studio</span></a>
-        <nav>
+        <nav class="nav">
           <ul class="nav__list list">
             <li><a href="./index.html" class="nav__link link current">Студія</a></li>
             <li><a href="./portfolio.html" class="nav__link link">Портфоліо</a></li>
@@ -62,7 +62,7 @@
           <button type="button" class="button" data-modal-open>Замовити послугу</button>
         </div>
       </section>
-      <section class="section">
+      <section class="solution">
         <div class="container">
           <ul class="solution__container">
             <li class="solution__item icon-antena">
@@ -95,7 +95,7 @@
           </ul>
         </div>
       </section>
-      <section class="work section">
+      <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -126,7 +126,7 @@
           </ul>
         </div>
       </section>
-      <section class="team section">
+      <section class="team">
          <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__container">
@@ -137,9 +137,9 @@
                 width="270"
                 height="260"
               />
-              <div class="teammate__card">
-                <h3 class="teammate__name">Ігор Дем'яненко</h3>
-                <p class="teammate__profession" lang="en">Product Designer</p>
+              <div class="team__wrapper">
+                <h3 class="team__name">Ігор Дем'яненко</h3>
+                <p class="team__position" lang="en">Product Designer</p>
                 <ul class="socials">
                   <li class="socials__item">
                     <a
@@ -203,9 +203,9 @@
                 width="270"
                 height="260"
               />
-              <div class="teammate__card">
-                <h3 class="teammate__name">Ольга Рєпіна</h3>
-                <p class="teammate__profession" lang="en">Frontend Developer</p>
+              <div class="team__wrapper">
+                <h3 class="team__name">Ольга Рєпіна</h3>
+                <p class="team__position" lang="en">Frontend Developer</p>
                 <ul class="socials">
                   <li class="socials__item">
                     <a
@@ -269,9 +269,9 @@
                 width="270"
                 height="260"
               />
-              <div class="teammate__card">
-                <h3 class="teammate__name">Микола Тарасов</h3>
-                <p class="teammate__profession" lang="en">Marketing</p>
+              <div class="team__wrapper">
+                <h3 class="team__name">Микола Тарасов</h3>
+                <p class="team__position" lang="en">Marketing</p>
                 <ul class="socials">
                   <li class="socials__item">
                     <a
@@ -335,9 +335,9 @@
                 width="270"
                 height="260"
               />
-              <div class="teammate__card">
-                <h3 class="teammate__name">Михайло Єрмаков</h3>
-                <p class="teammate__profession" lang="en">UI Designer</p>
+              <div class="team__wrapper">
+                <h3 class="team__name">Михайло Єрмаков</h3>
+                <p class="team__position" lang="en">UI Designer</p>
                 <ul class="socials">
                   <li class="socials__item">
                     <a
@@ -397,48 +397,48 @@
           </ul>
          </div>
       </section>
-      <section class="section">
+      <section class="client">
         <div class="container">
           <h2 class="client__header">Постійні клієнти</h2>
-          <ul class="clients">
+          <ul class="client__wrapper">
             <li>
               <a class="client__link link" href="">
-                <svg class="" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="client__link link" href="">
-                <svg class="client" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="client__link link" href="">
-                <svg class="client" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group3"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="client__link link" href="">
-                <svg class="client" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group4"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="client__link link" href="">
-                <svg class="client" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group5"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="client__link link" href="">
-                <svg class="client" width="106" height="60">
+                <svg class="client__icon" width="106" height="60">
                   <use href="./images/icons.svg#group6"></use>
                 </svg>
               </a>
