--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header__container container">
         <a href="" class="logo">WEB<span class="logo__header">STUDIO</span></a>
         <nav class="nav">
@@ -54,15 +54,15 @@
           </li>
         </ul>
       </div>
-     </header>
+     </header> -->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="hero__container">
           <h1 class="hero__title">Effective Solutions<br>for Your Business</h1>
           <button type="button" class="button" data-modal-open>Order Service</button>
         </div>
-      </section>
-      <section class="solution">
+      </section> -->
+      <!-- <section class="solution">
         <div class="container">
           <ul class="solution__container">
             <li class="solution__item icon-antena">
@@ -92,8 +92,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="work">
+      </section> -->
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work__title">What are we doing</h2>
           <ul class="work__list">
@@ -114,8 +114,8 @@
              </li>
           </ul>
         </div>
-      </section>
-      <section class="team">
+      </section> -->
+      <!-- <section class="team">
          <div class="container">
           <h2 class="team__title">Our Team</h2>
           <ul class="team__container">
@@ -385,8 +385,8 @@
             </li>
           </ul>
          </div>
-      </section>
-      <section class="client">
+      </section> -->
+      <!-- <section class="client">
         <div class="container">
           <h2 class="client__header">Customers</h2>
           <ul class="client__wrapper">
@@ -435,9 +435,9 @@
           </ul>
         </div>
        
-      </section>
+      </section> -->
     </main>
-
+<!-- 
     <footer class="footer">
      
       <div class="footer__container container">
@@ -494,7 +494,7 @@
     </div>
 
 
-    </footer>
+    </footer> -->
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
