--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </ul>
         </div>
       </section> -->
-      <!-- <section class="work">
+      <section class="work">
         <div class="container">
           <h2 class="work__title">What are we doing</h2>
           <ul class="work__list">
@@ -114,7 +114,7 @@
              </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- <section class="team">
          <div class="container">
           <h2 class="team__title">Our Team</h2>
@@ -386,7 +386,7 @@
           </ul>
          </div>
       </section> -->
-      <!-- <section class="client">
+      <section class="client">
         <div class="container">
           <h2 class="client__header">Customers</h2>
           <ul class="client__wrapper">
@@ -435,7 +435,7 @@
           </ul>
         </div>
        
-      </section> -->
+      </section>
     </main>
 <!-- 
     <footer class="footer">
