--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </ul>
         </div>
       </section>
-      <!-- <section class="team">
+      <section class="team">
          <div class="container">
           <h2 class="team__title">Our Team</h2>
           <ul class="team__container">
@@ -123,7 +123,7 @@
               <img
                 src="./images/t1.jpg"
                 alt="член команди"
-                width="270"
+                width="264"
                 height="260"
               />
               <div class="team__wrapper">
@@ -189,7 +189,7 @@
               <img
                 src="./images/t2.jpg"
                 alt="член команди"
-                width="270"
+                width="264"
                 height="260"
               />
               <div class="team__wrapper">
@@ -255,7 +255,7 @@
               <img
                 src="./images/t3.jpg"
                 alt="член команди"
-                width="270"
+                width="264"
                 height="260"
               />
               <div class="team__wrapper">
@@ -321,7 +321,7 @@
               <img
                 src="./images/t4.jpg"
                 alt="член команди"
-                width="270"
+                width="264"
                 height="260"
               />
               <div class="team__wrapper">
@@ -385,7 +385,7 @@
             </li>
           </ul>
          </div>
-      </section> -->
+      </section>
       <section class="client">
         <div class="container">
           <h2 class="client__header">Customers</h2>
