--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </div>
      </header> -->
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="hero__container">
           <h1 class="hero__title">Effective Solutions<br>for Your Business</h1>
           <button type="button" class="button" data-modal-open>Order Service</button>
         </div>
-      </section> -->
-      <!-- <section class="solution">
+      </section>
+      <section class="solution">
         <div class="container">
           <ul class="solution__container">
             <li class="solution__item icon-antena">
@@ -92,7 +92,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <section class="work">
         <div class="container">
           <h2 class="work__title">What are we doing</h2>
