--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header__container container">
         <a href="" class="logo">WEB<span class="logo__header">STUDIO</span></a>
         <nav class="nav">
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </div>
-     </header> -->
+     </header>
     <main>
       <section class="hero">
         <div class="hero__container">
