--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="header__container container">
         <nav class="nav">
           <a href="" class="logo">WEB<span class="logo__header">STUDIO</span></a>
@@ -53,7 +53,6 @@
             >
           </li>
         </ul>
-
             <button class="menu-open" type="button" data-menu-open>
               <svg class="menu-open-icon" width="32" height="22">
                 <use href="./images/icons.svg#hamburger"></use>
@@ -61,7 +60,7 @@
             </button>
             </div>
 
-            <div class="mob-menu is-hidden" data-menu>
+            <div class="mob-menu is-open" data-menu>
 
               <div class="mob-menu-pos">
                 <div class="mob-menu-top">
@@ -132,7 +131,7 @@
       </div>
      
 
-     </header> -->
+     </header>
     <main>
       <section class="hero">
         <div class="hero__container">
