--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         <ul class="header__contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="header__tel">
-              <svg class="header__icon" width="16" height="12">
+              <!-- <svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
-              </svg>
+              </svg> -->
               info@devstudio.com</a
             >
           </li>
           <li>
             <a class="header__mail link" href="tel:+380961111111">
-              <svg class="header__icon" width="10" height="16">
+              <!-- <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
-              </svg>
+              </svg> -->
               +11 (000) 111-11-11</a
             >
           </li>
