--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
         </button>
       </div>
     
-      <div class="mob-menu is-hidden" data-menu>
+      <div class="mob-menu is-open" data-menu>
     
-        <div class="mob-menu-pos">
+        <div class="container">
           <div class="mob-menu-top">
             <button class="menu-close" type="button" data-menu-close>
               <svg class="menu-close-icon" width="8" height="8">
