--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="mob-menu is-open" data-menu>
 
-              <div class="mob-menu-pos">
+              <div class="container">
                 <div class="mob-menu-top">
                 <button class="menu-close" type="button" data-menu-close>
                   <svg class="menu-close-icon" width="8" height="8">
