--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             >
           </li>
           <li>
-            <a class="header__mail link" href="tel:+380961111111">
+            <a class="header__mail link" href="tel:++110001111111">
               <!-- <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg> -->
@@ -60,7 +60,7 @@
             </button>
             </div>
 
-            <div class="mob-menu is-open" data-menu>
+            <div class="mob-menu" data-menu>
 
               <div class="container">
                 <div class="mob-menu-top">
@@ -80,7 +80,7 @@
               <div class="mob-menu-bottom">
                 <ul>
                   <li>
-                    <a href="tel: +11 (000) 111-11-11" class="mob-menu-tel link">
+                    <a href="tel:110001111111" class="mob-menu-tel link">
                       +11 (000) 111-11-11</a>
                   </li>
                   <li>
@@ -176,17 +176,17 @@
           <ul class="work__list">
             <li>
               <div class="work__thumb">
-              <img src="./images/img 1.jpg" alt="заняття" width="370" />
+              <img src="./images/img1.jpg" alt="заняття" width="370" />
               </div>
               </li>
             <li>   
                <div class="work__thumb">
-              <img src="./images/img 2.jpg" alt="заняття" width="370" />
+              <img src="./images/img2.jpg" alt="заняття" width="370" />
               </div>
               </li>
             <li>   
                <div class="work__thumb">
-                 <img src="./images/img 3.jpg" alt="заняття" width="370" />
+                 <img src="./images/img3.jpg" alt="заняття" width="370" />
               </div>
              </li>
           </ul>
@@ -521,7 +521,7 @@
         <div class="footer__logo__container">
           <div>
             <a href="" class="logo">WEB<span class="logo__footer">STUDIO</span></a>
-            <ul>
+        
               <p class="footer__text">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
           </div>
@@ -571,7 +571,7 @@
     <div class="footer__form__box">
       <p class="foooter__form__header">Subscribe</p>
       <form class="footer__form" name="footer-form">
-        <input class="footer__form__field" type="text" name="user_mail" id="user_mail" placeholder="E-mail"/>
+        <input class="footer__form__field" type="text" name="user_mail" placeholder="E-mail"/>
         <button type="button" class="footer__button">Subscribe</button>
       </form>
     </div>
