--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close>
-          <svg class="modal-icon" width="" height="">
+          <svg class="modal-icon" width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
