--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         </button>
       </div>
     
-      <div class="mob-menu is-open" data-menu>
+      <div class="mob-menu" data-menu>
     
         <div class="container">
           <div class="mob-menu-top">
