--- a/index.html
+++ b/index.html
@@ -196,6 +196,9 @@
               <img
                 src="./images/t1.jpg"
                 alt="член команди"
+                srcset="
+                ./images/t1.jpg 1x, 
+                ./images/t1-2x.jpg 2x "
                 width="264"
                 height="260"
               />
@@ -262,6 +265,9 @@
               <img
                 src="./images/t2.jpg"
                 alt="член команди"
+                srcset="
+                ./images/t2.jpg 1x, 
+                ./images/t2-2x.jpg 2x "
                 width="264"
                 height="260"
               />
@@ -328,6 +334,9 @@
               <img
                 src="./images/t3.jpg"
                 alt="член команди"
+                srcset="
+                ./images/t3.jpg 1x, 
+                ./images/t3-2x.jpg 2x "
                 width="264"
                 height="260"
               />
@@ -394,6 +403,9 @@
               <img
                 src="./images/t4.jpg"
                 alt="член команди"
+                srcset="
+                ./images/t4.jpg 1x, 
+                ./images/t4-2x.jpg 2x "
                 width="264"
                 height="260"
               />
